<resources>
    <string name="app_name">Flag Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Flag Quiz Game</string>
    <string name="button_start">Start</string>
    <string name="correct_text">Correct:</string>
    <string name="correct_number">0</string>
    <string name="empty_text">Empty:</string>
    <string name="empty_number">0</string>
    <string name="wrong_text">Wrong:</string>
    <string name="wrong_number">0</string>
    <string name="question_number">Question:</string>
    <string name="button_option">Country Name</string>
    <string name="button_next">Next</string>
    <string name="your_result">Your Result </string>
    <string name="button_again">New Quiz</string>
    <string name="button_exit">Exit</string>

</resources>