<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context="com.megha.flagquiz.view.FragmentQuiz">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/correct_text"
            android:textColor="#455A64"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/correct_number"
            android:textColor="#455A64"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty_text"
            android:textColor="#455A64"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty_number"
            android:textColor="#455A64"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wrong_text"
            android:textColor="#455A64"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wrong_number"
            android:textColor="#455A64"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_number"
        android:textColor="#455A64"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="79dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageViewFlag"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/argentina"
        tools:ignore="ContentDescription,ImageContrastCheck,MissingConstraints"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="138dp" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="297dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="361dp">

        <Button
            android:id="@+id/buttonA"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/button_option"
            android:textColor="@color/pink"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/button_option"
            android:textColor="@color/pink"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/button_option"
            android:textColor="@color/pink"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/buttonD"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/white"
            android:text="@string/button_option"
            android:textColor="@color/pink"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="255dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/pink"
            android:drawableEnd="@drawable/next"
            android:text="@string/button_next"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>